--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
+    "react-spinner": "^0.2.7",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "swiper": "^11.1.14"
