--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.3.0",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
+    "react-routers": "^2.1.1",
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
