--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "fill-range": "^7.1.1",
     "finalhandler": "^1.3.1",
     "forwarded": "^0.2.0",
@@ -83,7 +84,7 @@
     "minimatch": "^3.1.2",
     "mongodb": "^6.10.0",
     "mongodb-connection-string-url": "^3.0.1",
-    "mongoose": "^8.8.0",
+    "mongoose": "^8.8.1",
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.0.0",
