--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "express-validator": "^7.2.0",
     "mongoose": "^8.8.0",
     "swiper": "^6.8.4"
+  },
+  "devDependencies": {
+    "prettier": "3.3.3"
   }
 }
