--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
-    "swiper": "^6.8.4"
+    "stripe": "^17.4.0",
+    "swiper": "^11.1.15",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
