--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "mongoose": "^8.8.0",
+    "nodemailer": "^6.9.16",
     "prop-types": "^15.8.1",
     "swiper": "^6.8.4"
   },
